# gen-dnn

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.cxx-pod  README-SX.md  README.lrn  README.md  TODO  b.sh  bench-run.sh  bench.sh  build-x86.sh  build.sh  clang-7139.cpp  concat.in  conv-bench.sh  conv-gemm.in  conv.in  convdiff.sh  cpp_vs_c.md  cxx-locals.cpp  cxx-pod-test.cpp  cxx-pod.cpp  cxx-pod.h  cxx-pod.hpp  cxx-pod2.cpp  diffs.sh  ee.cpp  elt-cp.sh  elt.in  faults.sh  gdb.sh  hello.c  lrn-nc.in  lrn.in  lrnb.in  lrnx.in  lrny.in  mac.cpp  (+16 more)
dev-cmake-sx/: .gitignore  CMakeLists.txt  Makefile  README  README.md  cmake.sh  foo.cc  libspeed.cpp  libspeed.hpp  snprintf.cpp  speed.cpp  speed2.cpp  types.cpp
dev-cmake-sx/Platform/: SX  SX-C  SX-CXX  SX-Initialize  SX-ar  SX-util.cmake
dev-cmake-sx/cmake/: sx.cmake
examples/: CMakeLists.txt  Makefile  cnn_inference_f32.cpp  cnn_training_f32.cpp  cpu_cnn_inference_int8.cpp  cpu_cnn_training_bf16.cpp  cpu_cnn_training_f32.c  cpu_rnn_inference_f32.cpp  cpu_rnn_inference_int8.cpp  cpu_rnn_training_f32.cpp  example_utils.h  example_utils.hpp  memory_format_propagation.cpp  pragma-gcc.cxx  rnn_training_f32.cpp  simple_net.c  simple_net.cpp  simple_net_int8.cpp  simple_training_net.c  simple_training_net.cpp
examples/primitives/: inner_product.cpp  stream.cpp
examples/tutorials/matmul/: cpu_matmul_quantization.cpp  cpu_matmul_quantization.cpp.debug
src/: .gitignore  CMakeLists.txt  Makefile.vconv  mk-vconv.sh
src/common/: CMakeLists.txt  batch_normalization.cpp  batch_normalization_pd.hpp  bfloat16.hpp  binary.cpp  c_types_map.hpp  concat_pd.hpp  consistency.hpp  convolution.cpp  convolution_pd.hpp  counting_barrier.hpp  cpu_target.h  debug.cpp  deconvolution.cpp  dnnl_debug_autogenerated.cpp  dnnl_omp.h  dnnl_optimize.h  dnnl_os.h  dnnl_thread.hpp  dnnl_thread_parallel_nd.hpp  dnnl_traits.hpp  eltwise.cpp  engine.cpp  engine.hpp  float16.hpp  inner_product.cpp  layer_normalization.cpp  lrn.cpp  math_utils.hpp  matmul.cpp  memory.cpp  memory_debug.cpp  memory_desc_wrapper.cpp  memory_desc_wrapper.hpp  memory_tracking.hpp  memory_zero_pad.cpp  mkldnn_debug.cpp  mkldnn_thread.hpp  mkldnn_traits.hpp  nstl.hpp  (+33 more)
src/common/ve/: README.md  consistency.hpp  convolution.cpp  dnnl_thread_parallel_nd_vec.hpp  idiv.hpp  inner_product.cpp  memory_desc_wrapper_opt.cpp  memory_desc_wrapper_opt.hpp  memory_desc_wrapper_opt.hpp.0  memory_desc_wrapper_opt_dev.cpp  memory_desc_wrapper_opt_dev.hpp  ve_fastdiv.h
src/compute/: kernel_arg_list.hpp
src/cpu/: CMakeLists.txt  bfloat16.cpp  cpu_barrier.cpp  cpu_barrier.hpp  cpu_batch_normalization_list.cpp  cpu_batch_normalization_pd.hpp  cpu_batch_normalization_utils.cpp  cpu_concat.cpp  cpu_convolution_list.cpp  cpu_deconvolution_list.cpp  cpu_eltwise_list.cpp  cpu_engine.cpp  cpu_engine.hpp  cpu_inner_product_list.cpp  cpu_isa.hpp  cpu_isa_traits.cpp  cpu_isa_traits.hpp  cpu_layer_normalization_list.cpp  cpu_lrn_list.cpp  cpu_memory.cpp  cpu_memory.hpp  cpu_pooling_list.cpp  cpu_primitive.hpp  cpu_reducer.cpp  cpu_reorder.cpp  cpu_reorder_comp_s8s8_list.cpp.reverted  cpu_reorder_lists.hpp  cpu_reorder_regular_list.cpp  cpu_shuffle_list.cpp  cpu_softmax_list.cpp  cpu_softmax_pd.hpp  cpu_sum.cpp  gemm_bf16_convolution.cpp  gemm_bf16_convolution.hpp  gemm_bf16_inner_product.cpp  gemm_bf16_inner_product.hpp  gemm_convolution.cpp  gemm_convolution.hpp  gemm_convolution_utils.cpp  gemm_convolution_utils.hpp  (+113 more)
src/cpu/binary/: cpu_binary_list.cpp  ref_binary.cpp
src/cpu/gemm/: gemm.cpp  gemm.hpp  gemm_driver.cpp  gemm_driver.hpp  gemm_info.cpp  gemm_info.hpp  gemm_msan_unpoison.hpp  gemm_pack.cpp  gemm_pack.hpp  gemv_driver.cpp  os_blas.hpp  ref_gemm.cpp
src/cpu/jit_utils/: jit_utils.cpp
src/cpu/matmul/: cpu_matmul_list.cpp  gemm_based_common.hpp  gemm_bf16_matmul.cpp  gemm_bf16_matmul.hpp  gemm_f32_matmul.cpp  gemm_f32_matmul.hpp  gemm_x8s8s32x_matmul.cpp  gemm_x8s8s32x_matmul.hpp  ref_matmul.cpp
src/cpu/resampling/: cpu_resampling_list.cpp  ref_resampling.cpp
src/cpu/rnn/: cell_common.cpp  cell_gru.cpp  cell_gru_lbr.cpp  cpu_rnn_list.cpp  jit_uni_rnn_common_postgemm_dispatcher.hpp  ref_postgemm_gru.cpp  ref_postgemm_lstm.cpp  (+6 more)
src/gpu/: gpu_concat_pd.hpp  gpu_deconvolution_pd.hpp  gpu_lrn_pd.hpp  gpu_softmax_pd.hpp  gpu_sum_pd.hpp
src/io/: names.cpp  ostream.cpp
src/ocl/: ref_matmul.hpp
src/vanilla/: CMakeLists.txt  README.md  any_gemm_convolution.cpp  any_gemm_convolution.hpp  any_gemm_convolution_utils.cpp  any_gemm_convolution_utils.hpp  any_primitive_conf.hpp  cpu_barrier.cpp  cpu_barrier.hpp  cpu_batch_normalization_pd.hpp  cpu_batch_normalization_utils.cpp  cpu_batch_normalization_utils.hpp  cpu_concat.cpp  cpu_concat.hpp  cpu_concat_pd.hpp  cpu_convolution_pd.hpp  cpu_deconvolution_pd.hpp  cpu_eltwise_pd.hpp  cpu_engine.cpp  cpu_engine.hpp  cpu_inner_product_pd.hpp  cpu_isa.hpp  cpu_isa_traits.hpp  cpu_lrn_pd.hpp  cpu_memory.cpp  cpu_memory.hpp  cpu_memory.hpp.old  cpu_memory_storage.hpp  cpu_pooling_pd.hpp  cpu_primitive.hpp  cpu_reducer.cpp  cpu_reducer.hpp  cpu_reorder.cpp  cpu_reorder_pd.hpp  cpu_rnn_pd.hpp  cpu_shuffle_pd.hpp  cpu_simple_concat.hpp  cpu_simple_sum.hpp  cpu_softmax_pd.hpp  cpu_stream.hpp  (+71 more)
src/vconv/: .gitignore  LICENSE  Makefile  README.md  c_types_map.hpp  gemm_convolution.cpp  gemm_convolution.hpp  gemm_convolution_bwd_w_bias.cpp  gemm_convolution_utils.cpp  gemm_convolution_utils.hpp  memory.cpp  memory_desc_wrapper.cpp  mkldnn_conv_subset.h.nogood  mkldnn_conv_subset.hpp.nogood  mkldnn_types.h  scratchpad.cpp  test_md.c
src/vgemm/: .gitignore  Makefile  README.md  cpu_isa_traits.hpp  gemm.hpp  gemm_utils.cpp  gemm_utils.hpp  mkldnn_os.h  utils.hpp
tests/benchdnn/: .gitignore  CMakeLists.txt  README.md  TODO.md  benchdnn.cpp  common.cpp  common.hpp  conv3.cpp.notes  dnn_types.cpp  dnn_types.hpp  dnnl_common.hpp  dnnl_debug_autogenerated.cpp  dnnl_memory.hpp  idiv.hpp  mkldnn_common.hpp  mkldnn_debug.cpp  mkldnn_memory.hpp  perf.c  perf.h  perf_cloexec.c  perf_common.c  perf_common.h  ref_conv3.cpp.v0  ref_conv3.cpp.v1  ref_conv3.cpp.v2
(+524 files in other folders)
